// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Create Post Controller Snapshot Test for empty request body. 1`] = `
{
  "body": {
    "message": "Request body is required",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create Post Controller Snapshot Test for error while saving post. 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Create Post Controller Snapshot Test for invalid user-id. 1`] = `
{
  "body": {
    "message": "Invalid userID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create Post Controller Snapshot Test for missing description. 1`] = `
{
  "body": {
    "message": "Title and description are required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create Post Controller Snapshot Test for missing title. 1`] = `
{
  "body": {
    "message": "Title and description are required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create Post Controller Snapshot Test for successful post creation. 1`] = `
{
  "body": {
    "data": {
      "_id": "507f1f77bcf86cd799438978",
      "author": "507f1f77bcf86cd799439011",
      "comments": 12,
      "createdAt": "2026-03-04T17:00:19.599Z",
      "deletedAt": null,
      "description": "postDescription",
      "isPinned": false,
      "isTrashed": false,
      "like": 924,
      "title": "postTitle",
      "updatedAt": "2026-03-04T17:00:19.599Z",
    },
    "message": "Article created successfully.",
    "success": true,
  },
  "status": 201,
}
`;

exports[`Create Post Controller Snapshot Test when user not found. 1`] = `
{
  "body": {
    "message": "User not found.",
    "success": false,
  },
  "status": 404,
}
`;
